--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -2,7 +2,7 @@ body {
    margin: 0px;
    font-family: 'Montserrat', sans-serif;
    font-size: 15px;
-   color: #333;
+   color: #ff000033;
    line-height: 1.6;
 }
 
